Resolves: fdo#88735 crash after calling sort after subtotal removal

Change-Id: Ia30271426ea47b7bf5af85d16591a02e6d52b3d9
(cherry picked from commit 0442cd217645aa4fdd924e4c2e4f90a77f1fbbad)
Reviewed-on: https://gerrit.libreoffice.org/14139
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>